Changes to ID and fixed graphical line bug cutting off congressman title text in contact_representatives html file

--- a/static/css/contact_representatives.css
+++ b/static/css/contact_representatives.css
@@ -1,3 +1,6 @@
-#textbox {
+.textbox {
 --color: black;
+width: 400px;
+height: 250px;
+--padding-bottom: -75px;
 }
